--- a/ble/build.gradle
+++ b/ble/build.gradle
@@ -8,7 +8,7 @@ android {
         targetSdkVersion 29
         versionCode 27
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -25,11 +25,14 @@ android {
 }
 
 dependencies {
-    api 'androidx.annotation:annotation:1.1.0'
+//    api 'androidx.annotation:annotation:1.1.0'
+    api 'com.android.support:support-annotations:28.0.0'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+//    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
 apply from: rootProject.file('gradle/gradle-bintray-push.gradle')
